added components,service for reddit play

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "redditplay"
+    }
+  },
+  "defaultProject": "redditplay",
+  "cli": {
+    "analytics": false
+  }
 }
